The great un-spigoting
(of the GUI framework)